--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="jar/poi-3.17.jar"/>
+	<classpathentry kind="lib" path="jar/gson-2.8.2.jar"/>
+	<classpathentry kind="lib" path="jar/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="jar/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
