--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,15 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="jar/poi-3.17.jar"/>
 	<classpathentry kind="lib" path="jar/gson-2.8.2.jar"/>
 	<classpathentry kind="lib" path="jar/jdatepicker-1.3.4.jar"/>
 	<classpathentry kind="lib" path="jar/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="jar/poi-ooxml-3.17.jar"/>
+	<classpathentry kind="lib" path="jar/poi-3.17.jar"/>
+	<classpathentry kind="lib" path="jar/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="jar/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="jar/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="jar/poi-ooxml-schemas-3.17.jar"/>
+	<classpathentry kind="lib" path="jar/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
