--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="lib" path="jar/gson-2.8.2.jar"/>
 	<classpathentry kind="lib" path="jar/jdatepicker-1.3.4.jar"/>
 	<classpathentry kind="lib" path="jar/json-simple-1.1.1.jar"/>
-	<classpathentry kind="lib" path="jar/poi-ooxml-3.17.jar"/>
+	<classpathentry kind="lib" path="jar/poi-ooxml-3.17.jar" sourcepath="C:/Users/Taisin/.m2/repository/org/apache/poi/poi-ooxml/3.17/poi-ooxml-3.17-sources.jar"/>
 	<classpathentry kind="lib" path="jar/poi-3.17.jar"/>
 	<classpathentry kind="lib" path="jar/commons-codec-1.10.jar"/>
 	<classpathentry kind="lib" path="jar/commons-collections4-4.1.jar"/>
