--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="jar/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="jar/poi-ooxml-schemas-3.17.jar"/>
 	<classpathentry kind="lib" path="jar/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="jar/ooxml-schemas-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
